--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "express-flash": "0.0.2",
+    "express-jwt": "^5.0.0",
     "express-session": "^1.2.1",
     "express-validator": "^2.20.4",
     "http": "0.0.0",
     "jade": "^1.11.0",
+    "jsonwebtoken": "^7.1.9",
     "knex": "^0.10.0",
     "method-override": "^2.3.5",
     "morgan": "^1.7.0",
