--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "Battle Arena: Space",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+		"test": "NODE_ENV=test mocha"
   },
   "dependencies": {
     "async": "^1.5.2",
@@ -32,7 +33,11 @@
     "pg": "^4.5.1",
     "socket.io": "^1.4.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2",
+    "supertest": "^2.0.0"
+  },
   "engines": {
     "node": "6.1.0"
   }
